--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
             gap: 20px;
             flex-wrap: wrap;
             justify-content: center;
+            align-items: center;
         }
 
         .btn-primary {
@@ -842,6 +843,7 @@
         <div class="hero-cta">
             <a href="#updates" class="btn-primary">Get Early Access</a>
             <a href="https://github.com/Cirkitly/spec2rtl" class="btn-secondary">Try spec2rtl</a>
+            <a href="https://www.producthunt.com/products/github-162?embed=true&utm_source=badge-featured&utm_medium=badge&utm_source=badge-github-fc365195-96d7-481c-b508-a3dad7c659f6" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=1001860&theme=light&t=1754393076341" alt="GitHub -  AI-Powered Hardware Design & Verification Copilot | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
         </div>
     </section>
 
